--- a/_config.yml
+++ b/_config.yml
@@ -6,24 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 徐代龙的技术专栏
-brief-intro: Android and Python Coder
+title: viktorika的博客
+brief-intro: c++ Coder
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://643435675.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: #gaohaoyang126
-facebook_username: #gaohaoyang.water
-github_username:  643435675
-email: 643435675@QQ.com
-weibo_username: 3115521wh
-zhihu_username: hll643435675
-linkedIn_username: gaohaoyang
-dribbble_username:
+github_username:  viktorika
+email: 598855847@QQ.com
 
-description_footer: 来自徐代龙的个人专栏！
+description_footer: viktorika的专栏
 
 # comments
 # two ways to comment, only choose one, and use your own short name
