--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink: /:year/:month/:day/:title/
 
 # other links
 github_username:  viktorika
-email: 598855847@QQ.com
+email: 598855847@qq.com
 
 description_footer: viktorika的专栏
 
